--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "snowboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nappelbaum.github.io/snowboard/",
+  "homepage": "https://nappelbaum.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
